# 3050A2

./: CMakeLists.txt  DESGIN_DOC.md  MacOSX-Environment-Setup.md  Makefile  Makefile.Darwin  Makefile.Linux  Makefile.Windows  README.md  capsloadLinux  formatter_main.c  formatter_process.c  makezip  mk  mk.bat  modFormatter  module_api.h  module_tools.h  os_defs.h  strconcat.c  stringtools.h  strsplit.c
Modules/CRLF/: Makefile.Darwin  Makefile.Linux  crlf.c
Modules/bare/: Makefile.Darwin  Makefile.Linux  Makefile.Windows  bare.c
Modules/caps/: Makefile.Darwin  Makefile.Linux  caps.c  caps.h
Modules/default/: Makefile.Darwin  Makefile.Linux  default.c
Modules/native/: Makefile.Darwin  Makefile.Linux  native.c
Modules/quote/: Makefile.Darwin  Makefile.Linux  quote.c
test/result/: test1.result  test2.result  test3.result  test4.result
test/test/: para1
test_file/: tesing.txt
